Fixed scrollbars

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
   font-size: 18px;
+  width: 100%;
 }
 
 * {
@@ -7,7 +8,6 @@ html, body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  overflow: hidden;
 }
 
 p, a, div {
@@ -20,15 +20,15 @@ a {
 }
 
 section {
-  width: 100vw;
   height: 100vh;
+  width: 100%;
 }
 
 #navbar {
   display: flex;
   justify-content: space-between;
   height: 15vh;
-  width: 100vw;
+  width: 100%;
   border-bottom: 3px solid black;
   position: absolute;
   top: 0;
@@ -50,7 +50,7 @@ section {
 }
 
 #about {
-  animation: colorchange 10s infinite;
+  /*animation: colorchange 10s infinite; What the fuck*/
 }
 
 @keyframes colorchange {
